@@ -301,6 +301,42 @@ operator|.
 name|METASTOREFORCERELOADCONF
 block|}
 decl_stmt|;
+comment|/**    * dbVars are the parameters can be set per database. If these    * parameters are set as a database property, when switching to that    * database, the HiveConf variable will be changed. The change of these    * parameters will effectively change the DFS and MapReduce clusters    * for different databases.    */
+specifier|public
+specifier|static
+specifier|final
+name|HiveConf
+operator|.
+name|ConfVars
+index|[]
+name|dbVars
+init|=
+block|{
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPBIN
+block|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPJT
+block|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTOREWAREHOUSE
+block|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|SCRATCHDIR
+block|}
+decl_stmt|;
 comment|/**    * ConfVars.    *    */
 specifier|public
 specifier|static
