@@ -17401,6 +17401,111 @@ argument_list|(
 name|dbName
 argument_list|)
 expr_stmt|;
+comment|// set database specific parameters
+name|Database
+name|database
+init|=
+name|db
+operator|.
+name|getDatabase
+argument_list|(
+name|dbName
+argument_list|)
+decl_stmt|;
+assert|assert
+operator|(
+name|database
+operator|!=
+literal|null
+operator|)
+assert|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|dbParams
+init|=
+name|database
+operator|.
+name|getParameters
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|dbParams
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|HiveConf
+operator|.
+name|ConfVars
+name|var
+range|:
+name|HiveConf
+operator|.
+name|dbVars
+control|)
+block|{
+name|String
+name|newValue
+init|=
+name|dbParams
+operator|.
+name|get
+argument_list|(
+name|var
+operator|.
+name|varname
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|newValue
+operator|!=
+literal|null
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Changing "
+operator|+
+name|var
+operator|.
+name|varname
+operator|+
+literal|" from "
+operator|+
+name|conf
+operator|.
+name|getVar
+argument_list|(
+name|var
+argument_list|)
+operator|+
+literal|" to "
+operator|+
+name|newValue
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setVar
+argument_list|(
+name|var
+argument_list|,
+name|newValue
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 return|return
 literal|0
 return|;
